Optimize meta data loader (#129)